k8s/dev/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: zerohertzkr/dev:latest
          command:
            - "sh"
            - "-c"
            - "tail -f /dev/null"
          volumeMounts:
            - mountPath: /home/zerohertz/workspace
              name: server-storage
      volumes:
        - name: server-storage
          hostPath:
            path: /home/zerohertz/Zerohertz/withiy-server
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 8080
  selector:
    app: server
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: withiy-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`withiy-dev.zerohertz.xyz`)
      kind: Rule
      services:
        - name: server
          port: 8080
  tls:
    certResolver: zerohertz-resolver
